fixed min-width that caused horizontal scroll

--- a/styles/sass/partials/_main.scss
+++ b/styles/sass/partials/_main.scss
@@ -70,7 +70,7 @@
   z-index: 20;
   position: absolute;
   width: 43%;
-  min-width: 420px;
+  min-width: 300px;
   box-shadow: 30px 30px $robinBlue;
 }
 
